--- a/src/app/tests/suites/certification/Test_TC_MOD_1_1.yaml
+++ b/src/app/tests/suites/certification/Test_TC_MOD_1_1.yaml
@@ -15,70 +15,71 @@
 name: 78.1.1. [TC-MOD-1.1] Global attributes with server as DUT
 
 config:
-  nodeId: 0x12344321
-  cluster: "Mode Select"
-  endpoint: 1
+    nodeId: 0x12344321
+    cluster: "Mode Select"
+    endpoint: 1
 
 tests:
-  - label: "Wait for the commissioned device to be retrieved"
-    cluster: "DelayCommands"
-    command: "WaitForCommissionee"
-    arguments:
-      values:
-        - name: "nodeId"
-          value: nodeId
+    - label: "Wait for the commissioned device to be retrieved"
+      cluster: "DelayCommands"
+      command: "WaitForCommissionee"
+      arguments:
+          values:
+              - name: "nodeId"
+                value: nodeId
 
-  - label: "TH reads the ClusterRevision attribute from the DUT"
-    command: "readAttribute"
-    attribute: "ClusterRevision"
-    response:
-      value: 1
-      constraints:
-        type: uint16
+    - label: "TH reads the ClusterRevision attribute from the DUT"
+      command: "readAttribute"
+      attribute: "ClusterRevision"
+      response:
+          value: 1
+          constraints:
+              type: uint16
 
-  - label: "TH reads the FeatureMap attribute from the DUT"
-    command: "readAttribute"
-    attribute: "FeatureMap"
-    response:
-      value: 1
-      constraints:
-        type: map8
+    - label: "TH reads the FeatureMap attribute from the DUT"
+      command: "readAttribute"
+      attribute: "FeatureMap"
+      response:
+          value: 1
+          constraints:
+              type: map8
 
-  - label: "TH reads the AttributeList attribute from the DUT"
-    command: "readAttribute"
-    attribute: "AttributeList"
-    response:
-      constraints:
-        type: list
-        contains: [0, 1, 2, 3, 65528, 65529, 65531, 65532, 65533]
+    - label: "TH reads the AttributeList attribute from the DUT"
+      command: "readAttribute"
+      attribute: "AttributeList"
+      response:
+          constraints:
+              type: list
+              contains: [0, 1, 2, 3, 65528, 65529, 65531, 65532, 65533]
 
-  - label: "Read the global attribute: AcceptedCommandList"
-    command: "readAttribute"
-    attribute: "AcceptedCommandList"
-    response:
-      value: [0]
-      constraints:
-        type: list
+    - label: "Read the global attribute: AcceptedCommandList"
+      command: "readAttribute"
+      attribute: "AcceptedCommandList"
+      response:
+          value: [0]
+          constraints:
+              type: list
 
-  - label: "Read the global attribute: GeneratedCommandList"
-    command: "readAttribute"
-    attribute: "GeneratedCommandList"
-    response:
-      value: []
-      constraints:
-        type: list
+    - label: "Read the global attribute: GeneratedCommandList"
+      command: "readAttribute"
+      attribute: "GeneratedCommandList"
+      response:
+          value: []
+          constraints:
+              type: list
 
-  #issue #15011 disabled steps below Global attributes missing from YAML framework
-  - label: "Read EventList attribute from the DUT and Verify that the DUT
-      response provides a list of supported events."
-    verification: |
-      Not implemented in chip-tool
-    cluster: "LogCommands"
-    command: "UserPrompt"
-    PICS: PICS_USER_PROMPT
-    arguments:
-      values:
-        - name: "message"
-          value: "Please enter 'y' for success"
-        - name: "expectedValue"
-          value: "y"
+    #issue #15011 disabled steps below Global attributes missing from YAML framework
+    - label:
+          "Read EventList attribute from the DUT and Verify that the DUT
+          response provides a list of supported events."
+      verification: |
+          Not implemented in chip-tool
+      cluster: "LogCommands"
+      command: "UserPrompt"
+      PICS: PICS_USER_PROMPT
+      arguments:
+          values:
+              - name: "message"
+                value: "Please enter 'y' for success"
+              - name: "expectedValue"
+                value: "y"
