--- a/src/platform/EFR32/BUILD.gn
+++ b/src/platform/EFR32/BUILD.gn
@@ -25,6 +25,7 @@ if (chip_enable_openthread) {
 
 static_library("EFR32") {
   sources = [
+    "${chip_root}/src/credentials/DeviceAttestationCredsProvider.h",
     "../FreeRTOS/SystemTimeSupport.cpp",
     "../SingletonConfigurationManager.cpp",
     "BLEManagerImpl.cpp",
@@ -43,6 +44,8 @@ static_library("EFR32") {
     "DiagnosticDataProviderImpl.h",
     "EFR32Config.cpp",
     "EFR32Config.h",
+    "EFR32DeviceAttestationCreds.cpp",
+    "EFR32DeviceAttestationCreds.h",
     "InetPlatformConfig.h",
     "KeyValueStoreManagerImpl.cpp",
     "KeyValueStoreManagerImpl.h",
@@ -55,10 +58,6 @@ static_library("EFR32") {
     "gatt_db.c",
     "gatt_db.h",
   ]
-
-  if (chip_device_attestation_credentials) {
-    sources += [ "DeviceAttestationCredsImpl.cpp" ]
-  }
 
   if (chip_enable_ota_requestor) {
     sources += [
