--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -62,7 +62,6 @@ jobs:
               run: |
                   mkdir /tmp/cores || true
                   sysctl -w kernel.core_pattern=/tmp/cores/core.%u.%p.%t || true
-                  mkdir /tmp/executables || true
             - name: Bootstrap
               timeout-minutes: 10
               run: scripts/build/gn_bootstrap.sh
@@ -105,9 +104,6 @@ jobs:
             - name: Run Build Without Error Logging
               timeout-minutes: 20
               run: scripts/run_in_build_env.sh "ninja -C ./out"
-            - name: Copying executables
-              if: ${{ failure() }} && ${{ !env.ACT }}
-              run: find out/ -type f -executable | xargs cp -t /tmp/executables
             - name: Uploading core files
               uses: actions/upload-artifact@v2
               if: ${{ failure() }} && ${{ !env.ACT }}
@@ -116,12 +112,12 @@ jobs:
                   path: /tmp/cores/
                   # Cores are big; don't hold on to them too long.
                   retention-days: 5
-            - name: Uploading executables for debugging
+            - name: Uploading objdir for debugging
               uses: actions/upload-artifact@v2
               if: ${{ failure() }} && ${{ !env.ACT }}
               with:
-                  name: crash-executables-linux-gcc-debug
-                  path: /tmp/executables/
+                  name: crash-objdir-linux-gcc-debug
+                  path: out/
                   # objdirs are big; don't hold on to them too long.
                   retention-days: 5
     build_linux:
@@ -167,7 +163,6 @@ jobs:
               run: |
                   mkdir /tmp/cores || true
                   sysctl -w kernel.core_pattern=/tmp/cores/core.%u.%p.%t || true
-                  mkdir /tmp/executables || true
             - name: Bootstrap
               timeout-minutes: 10
               run: scripts/build/gn_bootstrap.sh
@@ -242,9 +237,6 @@ jobs:
               run: |
                   ./scripts/run_in_build_env.sh \
                     "./scripts/build/build_examples.py --no-log-timestamps --target linux-fake-tests build"
-            - name: Copying executables
-              if: ${{ failure() }} && ${{ !env.ACT }}
-              run: find out/ -type f -executable | xargs cp -t /tmp/executables
             - name: Uploading core files
               uses: actions/upload-artifact@v2
               if: ${{ failure() }} && ${{ !env.ACT }}
@@ -253,13 +245,13 @@ jobs:
                   path: /tmp/cores/
                   # Cores are big; don't hold on to them too long.
                   retention-days: 5
-            - name: Uploading executables for debugging
+            - name: Uploading objdir for debugging
               uses: actions/upload-artifact@v2
               if: ${{ failure() }} && ${{ !env.ACT }}
               with:
-                  name: crash-executables-linux
-                  path: /tmp/executables/
-                  # Executables are big; don't hold on to them too long.
+                  name: crash-objdir-linux
+                  path: out/
+                  # objdirs are big; don't hold on to them too long.
                   retention-days: 5
 
             # TODO Log Upload https://github.com/project-chip/connectedhomeip/issues/2227
