--- a/examples/platform/efr32/BUILD.gn
+++ b/examples/platform/efr32/BUILD.gn
@@ -37,11 +37,6 @@ config("chip_examples_project_config") {
     "-Wl,--wrap=_free_r",
     "-Wl,--wrap=_calloc_r",
   ]
-
-  defines = [
-    # Set to 1 to enable EFR32 attestation credentials
-    "EFR32_ATTESTATION_CREDENTIALS=0",
-  ]
 }
 
 source_set("openthread_core_config_efr32_chip_examples") {
@@ -68,4 +63,20 @@ source_set("efr-matter-shell") {
       "${chip_root}/src/lib/shell:shell_core",
     ]
   }
+}
+
+source_set("efr32-attestation-credentials") {
+
+    public_deps = [
+        "${chip_root}/src/credentials",
+        "${chip_root}/src/platform:platform_base",
+    ]
+    defines = [
+      # Set to 1 to enable EFR32 attestation credentials
+      "EFR32_ATTESTATION_CREDENTIALS=1",
+    ]
+    sources = [
+        "EFR32DeviceAttestationCreds.cpp",
+        "EFR32DeviceAttestationCreds.h",
+    ]
 }
