--- a/examples/chef/efr32/BUILD.gn
+++ b/examples/chef/efr32/BUILD.gn
@@ -336,6 +336,13 @@ efr32_executable("chef_app") {
     ]
   }
 
+  # Attestation Credentials
+  if (chip_build_device_attestation_credentials) {
+    deps += [
+      "${examples_plat_dir}:efr32-attestation-credentials",
+    ]
+  }
+
   output_dir = root_out_dir
 }
 
