--- a/examples/lighting-app/efr32/BUILD.gn
+++ b/examples/lighting-app/efr32/BUILD.gn
@@ -331,6 +331,13 @@ efr32_executable("lighting_app") {
     ]
   }
 
+  # Attestation Credentials
+  if (chip_build_device_attestation_credentials) {
+    deps += [
+      "${examples_plat_dir}:efr32-attestation-credentials",
+    ]
+  }
+
   output_dir = root_out_dir
 }
 
