--- a/examples/window-app/efr32/BUILD.gn
+++ b/examples/window-app/efr32/BUILD.gn
@@ -278,6 +278,13 @@ efr32_executable("window_app") {
       "-Wl,SILABS_WIFI=1",
     ]
   }
+
+  # Attestation Credentials
+  if (chip_build_device_attestation_credentials) {
+    deps += [
+      "${examples_plat_dir}:efr32-attestation-credentials",
+    ]
+  }
 }
 
 group("efr32") {
